# hackmit25

./: .env  README_DEMO.md  consolidated_metrics.json  package.json  test-server.js  test_claude_metrics.py  test_front_agent.py  test_full_pipeline.py  test_llm_processor.py  test_robotics_paper.py  test_server.py  test_session_api.py  vercel.json
backend/: .gitattributes  .gitignore  CLAUDE.md  README.md  debug_graph.json  entrypoint.py  output.md  pyproject.toml  setup_datadog.sh
backend/app/: __init__.py
backend/app/models/: __init__.py  research.py
backend/app/workloads/: __init__.py  arxiv_actor.py  cloud_graph.py  cosine_similarity.py  crawler.py  doc_ingest.py  extracter.py  front_agent.py  llm_processor.py  metric_sort.py  research_pipeline.py  similarity.graphml
backend/models/: README.md
backend/scripts/: anyscaletest.py  anyscaletest2.py  bigquery_athena_test.py  docling_benchmark_extractor.py  doclingtest.py  doclingtest2.py  download_papers.py  extract_benchmarks.py  model_management.py  test_llm_extraction.py  whateverburger.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  App.tsx.backup  App_old.tsx  index.css
frontend/src/components/: ActionButton.tsx  GraphView.tsx  LoadingPage.tsx
frontend/src/components/Filters/: FilterPanel.tsx
frontend/src/components/Graph/: GraphVisualization.tsx
frontend/src/hooks/: index.ts
frontend/src/pages/: GraphPage.tsx  Homepage.tsx  Homepage_old.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
(+2 files in other folders)
