[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "ray>=2.49.1",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "ddtrace>=2.3.0",
    "datadog>=0.47.0",
]
