[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.116.1",
    "ray>=2.49.1",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.1",
    "ddtrace>=2.3.0",
    "datadog>=0.47.0",
    "httpx>=0.24.0",
    "PyPDF2>=3.0.0",
    "openai>=1.0.0",
    "docling>=2.11.0",
    "pandas>=2.0.0",
    "anyscale>=0.26.57",
    "pyproject-toml>=0.1.0",
    "pyarrow>=21.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]
